--- a/index.html
+++ b/index.html
@@ -287,9 +287,17 @@
           Results will appear here...
         </div>
 
-        <button id="copyButton" class="btn btn-light" onclick="showCopiedMessage()">
+        <button
+          id="copyButton"
+          class="btn btn-light"
+          onclick="showCopiedMessage()"
+        >
           <i class="fas fa-copy"></i>
-          <span id="copiedMsg" style="display: none; color: green; margin-left: 10px;">Copied!</span>
+          <span
+            id="copiedMsg"
+            style="display: none; color: green; margin-left: 10px"
+            >Copied!</span
+          >
         </button>
       </div>
     </div>
@@ -759,11 +767,11 @@
 
       // show "Copied!" message when result is copied
       function showCopiedMessage() {
-        const msg = document.getElementById("copiedMsg");
-        msg.style.display = "inline";
+        const msg = document.getElementById('copiedMsg');
+        msg.style.display = 'inline';
 
         setTimeout(() => {
-          msg.style.display = "none";
+          msg.style.display = 'none';
         }, 1500);
       }
 
