--- a/index.html
+++ b/index.html
@@ -188,7 +188,10 @@
     <!-- xterm.js -->
     <script src="https://cdn.jsdelivr.net/npm/xterm@5.3.0/lib/xterm.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.7.0/lib/xterm-addon-fit.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@5.3.0/css/xterm.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/xterm@5.3.0/css/xterm.css"
+    />
     <link id="light-theme" rel="stylesheet" href="css/styles.css" />
     <link id="dark-theme" rel="stylesheet" href="css/styledark.css" disabled />
     <link rel="icon" href="/img/favicon.png" />
@@ -244,7 +247,7 @@
         </button>
         <button id="terminalButton" class="icon-button" title="Open Terminal">
           <i class="fas fa-terminal"></i>
-        </button>        
+        </button>
         <form
           id="saveWorkspaceForm"
           action="/saveWorkspace"
@@ -298,24 +301,24 @@
             <i class="fas fa-paste"></i>
           </button>
           <button
-          id="copyButton"
-          class="btn btn-light"
-          onclick="showCopiedMessage()"
-        >
+            id="copyButton"
+            class="btn btn-light"
+            onclick="showCopiedMessage()"
+          >
             <i class="fas fa-copy"></i>
             <span
-            id="copiedMsg"
-            style="display: none; color: green; margin-left: 10px"
-            >Copied!</span
-          >
-        </button>
-        </div>     
+              id="copiedMsg"
+              style="display: none; color: green; margin-left: 10px"
+              >Copied!</span
+            >
+          </button>
+        </div>
       </div>
     </div>
-    <div id="terminalWrapper" style="display: none;">
+    <div id="terminalWrapper" style="display: none">
       <div id="terminalResizer"></div>
       <div id="terminalContainer"></div>
-    </div>      
+    </div>
 
     <script>
       const baseBlockStyles = {
@@ -803,148 +806,164 @@
     </script>
     <script src="js/app.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-      const terminalWrapper = document.getElementById('terminalWrapper');
-      const terminalContainer = document.getElementById('terminalContainer');
-      const terminalResizer = document.getElementById('terminalResizer');
-      const terminalButton = document.getElementById('terminalButton');
+      document.addEventListener('DOMContentLoaded', function () {
+        const terminalWrapper = document.getElementById('terminalWrapper');
+        const terminalContainer = document.getElementById('terminalContainer');
+        const terminalResizer = document.getElementById('terminalResizer');
+        const terminalButton = document.getElementById('terminalButton');
 
-      let term = null; // Create later on click
+        let term = null; // Create later on click
 
-      terminalWrapper.style.width = '100%';
-      terminalWrapper.style.height = '25vh';
-      terminalWrapper.style.backgroundColor = '#252526'; 
-      terminalWrapper.style.border = '1px solid #555';
-      terminalWrapper.style.borderRadius = '8px';
-      terminalWrapper.style.marginTop = '10px';
-      terminalWrapper.style.display = 'none'; // hidden initially
-      terminalWrapper.style.flexDirection = 'column';
-      terminalWrapper.style.overflow = 'hidden';
- 
-      terminalContainer.style.width = '100%';
-      terminalContainer.style.height = '100%';
-      terminalContainer.style.padding = '9px';
-      terminalContainer.style.overflowX = 'auto';
-      terminalContainer.style.overflowY = 'auto';
-      terminalContainer.style.boxSizing = 'border-box';
+        terminalWrapper.style.width = '100%';
+        terminalWrapper.style.height = '25vh';
+        terminalWrapper.style.backgroundColor = '#252526';
+        terminalWrapper.style.border = '1px solid #555';
+        terminalWrapper.style.borderRadius = '8px';
+        terminalWrapper.style.marginTop = '10px';
+        terminalWrapper.style.display = 'none'; // hidden initially
+        terminalWrapper.style.flexDirection = 'column';
+        terminalWrapper.style.overflow = 'hidden';
 
-      terminalResizer.style.height = '2px';
-      terminalResizer.style.background = '#333';
-      terminalResizer.style.cursor = 'ns-resize';
-      
-      function checkTerminalServer(callback) {
-        const testSocket = new WebSocket('ws://localhost:5000');
+        terminalContainer.style.width = '100%';
+        terminalContainer.style.height = '100%';
+        terminalContainer.style.padding = '9px';
+        terminalContainer.style.overflowX = 'auto';
+        terminalContainer.style.overflowY = 'auto';
+        terminalContainer.style.boxSizing = 'border-box';
 
-        testSocket.onopen = () => {
-          testSocket.close();
-          callback(true);
-        };
+        terminalResizer.style.height = '2px';
+        terminalResizer.style.background = '#333';
+        terminalResizer.style.cursor = 'ns-resize';
 
-        testSocket.onerror = () => {
-          callback(false);
-        };
-      }
-      const pasteButton = document.getElementById('pasteToTerminalButton');
-      pasteButton.addEventListener('click', function () {
-        if (!term) {
-          alert("Terminal not initialized yet.");
-          return;
+        function checkTerminalServer(callback) {
+          const testSocket = new WebSocket('ws://localhost:5000');
+
+          testSocket.onopen = () => {
+            testSocket.close();
+            callback(true);
+          };
+
+          testSocket.onerror = () => {
+            callback(false);
+          };
         }
-        const text = document.getElementById('resultsText').innerText;
-        term.focus();
-        term.write(text + '\r');
-      });
-
-      terminalButton.addEventListener('click', function () {
-        checkTerminalServer((isRunning) => {
-          if (!isRunning) {
-            if (confirm("Terminal server is not running.\nWould you like to install it now?\n\n1. Open your terminal\n2. Paste the command\n3. Press Enter")) {
-              const installCommand = `curl -L -o install-ublocks.sh "https://www.dropbox.com/scl/fi/3t2aztovfbrd1xftcg4vq/install-ublocks.sh?rlkey=5i58ocs4mg3zhb1vlhnw9fz5h&st=gpsnmg1u&dl=1" && chmod +x install-ublocks.sh && ./install-ublocks.sh`;
-              navigator.clipboard.writeText(installCommand)
-                .then(() => {
-                  alert("✅ Command copied to clipboard!\n\nNow open your terminal and paste it.");
-                })
-                .catch(() => {
-                  alert("Here is the command to copy manually:\n\n" + installCommand);
-                });
-            }
+        const pasteButton = document.getElementById('pasteToTerminalButton');
+        pasteButton.addEventListener('click', function () {
+          if (!term) {
+            alert('Terminal not initialized yet.');
             return;
           }
+          const text = document.getElementById('resultsText').innerText;
+          term.focus();
+          term.write(text + '\r');
+        });
 
-          if (terminalWrapper.style.display === 'none') {
-            terminalWrapper.style.display = 'flex';
+        terminalButton.addEventListener('click', function () {
+          checkTerminalServer((isRunning) => {
+            if (!isRunning) {
+              if (
+                confirm(
+                  'Terminal server is not running.\nWould you like to install it now?\n\n1. Open your terminal\n2. Paste the command\n3. Press Enter'
+                )
+              ) {
+                const installCommand = `curl -L -o install-ublocks.sh "https://www.dropbox.com/scl/fi/3t2aztovfbrd1xftcg4vq/install-ublocks.sh?rlkey=5i58ocs4mg3zhb1vlhnw9fz5h&st=gpsnmg1u&dl=1" && chmod +x install-ublocks.sh && ./install-ublocks.sh`;
+                navigator.clipboard
+                  .writeText(installCommand)
+                  .then(() => {
+                    alert(
+                      '✅ Command copied to clipboard!\n\nNow open your terminal and paste it.'
+                    );
+                  })
+                  .catch(() => {
+                    alert(
+                      'Here is the command to copy manually:\n\n' +
+                        installCommand
+                    );
+                  });
+              }
+              return;
+            }
 
-            if (!term) {
-              term = new Terminal({
-                cursorBlink: true,
-                scrollback: 1000,
-                scrollOnUserInput: true,
-                scrollOnOutput: true,
-                rendererType: 'canvas',
-                wordWrap: true,
-                theme: {
-                  background: '#000000',
-                  foreground: '#ffffff'
-                }
-              });
+            if (terminalWrapper.style.display === 'none') {
+              terminalWrapper.style.display = 'flex';
 
-              term.open(terminalContainer);
-              term.focus();
+              if (!term) {
+                term = new Terminal({
+                  cursorBlink: true,
+                  scrollback: 1000,
+                  scrollOnUserInput: true,
+                  scrollOnOutput: true,
+                  rendererType: 'canvas',
+                  wordWrap: true,
+                  theme: {
+                    background: '#000000',
+                    foreground: '#ffffff'
+                  }
+                });
 
+                term.open(terminalContainer);
+                term.focus();
+
+                const adjustedWidth = terminalContainer.clientWidth - 18;
+                const adjustedHeight = terminalContainer.clientHeight - 18;
+                term.resize(
+                  Math.floor(adjustedWidth / 9),
+                  Math.floor(adjustedHeight / 17)
+                );
+                term.refresh(0, term.rows - 1);
+
+                const socket = new WebSocket('ws://localhost:5000');
+
+                socket.onopen = () => {
+                  term.write('Connected to Ublocks Terminal\r\n');
+                  term.onData((data) => socket.send(data));
+                };
+
+                socket.onmessage = (e) => {
+                  term.write(e.data);
+                  setTimeout(() => {
+                    term.scrollToBottom();
+                    terminalContainer.scrollLeft =
+                      terminalContainer.scrollWidth;
+                  }, 10);
+                };
+
+                term.setOption('scrollOnUserInput', true);
+                term.setOption('scrollOnOutput', true);
+              }
+            } else {
+              terminalWrapper.style.display = 'none';
+            }
+          });
+        });
+
+        let isResizing = false;
+
+        terminalResizer.addEventListener('mousedown', function (e) {
+          isResizing = true;
+        });
+
+        document.addEventListener('mousemove', function (e) {
+          if (!isResizing) return;
+          const newHeight = window.innerHeight - e.clientY;
+          terminalWrapper.style.height = newHeight + 'px';
+
+          if (term) {
+            setTimeout(() => {
               const adjustedWidth = terminalContainer.clientWidth - 18;
               const adjustedHeight = terminalContainer.clientHeight - 18;
-              term.resize(Math.floor(adjustedWidth / 9), Math.floor(adjustedHeight / 17));
-              term.refresh(0, term.rows - 1);
-
-              const socket = new WebSocket('ws://localhost:5000');
-
-              socket.onopen = () => {
-                term.write('Connected to Ublocks Terminal\r\n');
-                term.onData(data => socket.send(data));
-              };
-
-              socket.onmessage = (e) => {
-                term.write(e.data);
-                setTimeout(() => {
-                  term.scrollToBottom();
-                  terminalContainer.scrollLeft = terminalContainer.scrollWidth;
-                }, 10);
-              };
-
-              term.setOption('scrollOnUserInput', true);
-              term.setOption('scrollOnOutput', true);
-
-            }
-          } else {
-            terminalWrapper.style.display = 'none';
+              term.resize(
+                Math.floor(adjustedWidth / 9),
+                Math.floor(adjustedHeight / 17)
+              );
+            }, 50);
           }
         });
+
+        document.addEventListener('mouseup', function (e) {
+          isResizing = false;
+        });
       });
-
-      let isResizing = false;
-
-      terminalResizer.addEventListener('mousedown', function(e) {
-        isResizing = true;
-      });
-
-      document.addEventListener('mousemove', function(e) {
-        if (!isResizing) return;
-        const newHeight = window.innerHeight - e.clientY;
-        terminalWrapper.style.height = newHeight + 'px';
-
-        if (term) {
-          setTimeout(() => {
-            const adjustedWidth = terminalContainer.clientWidth - 18;
-            const adjustedHeight = terminalContainer.clientHeight - 18;
-            term.resize(Math.floor(adjustedWidth / 9), Math.floor(adjustedHeight / 17));
-          }, 50);
-        }
-      });
-
-      document.addEventListener('mouseup', function(e) {
-        isResizing = false;
-      });
-    });
-    </script>    
+    </script>
   </body>
 </html>
